main/perl-cgi: upgrade to 4.45

--- a/main/perl-cgi/APKBUILD
+++ b/main/perl-cgi/APKBUILD
@@ -3,10 +3,10 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-cgi
 _pkgreal=CGI
-pkgver=4.44
+pkgver=4.45
 pkgrel=0
 pkgdesc="Handle Common Gateway Interface requests and responses"
-url="http://search.cpan.org/dist/CGI/"
+url="https://metacpan.org/release/CGI"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 cpandepends="perl-html-parser"
@@ -15,7 +15,7 @@ depends="$cpandepends"
 makedepends="perl-dev"
 checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/L/LE/LEEJO/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/L/LE/LEEJO/CGI-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
@@ -39,4 +39,4 @@ check() {
 	make test
 }
 
-sha512sums="3cbb7d8c54a08ded7a78f971bda8dbd95ebe52cb10ff20a1094bbff7aa422eb76d456aa4a425aa45c6add2a6a2d669fc3814ee4ba554079d64a5226e0538ccfc  CGI-4.44.tar.gz"
+sha512sums="e1dcbc4cd5b89dbe10c9df5d7e35835c567e174744f62feefaeffd254fa351caf171479b3d0a07f06b74f468440c9ca8ef30e93d6526f1724ab1e87964bb0b0f  CGI-4.45.tar.gz"
