community/certbot: upgrade to 1.1.0

--- a/community/certbot/APKBUILD
+++ b/community/certbot/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=certbot
-pkgver=1.0.0
+pkgver=1.1.0
 pkgrel=0
 pkgdesc="An ACME client that can update Apache/Nginx configurations"
 url="https://github.com/certbot/certbot"
 arch="noarch"
-license="Apache"
+license="Apache-2.0"
 depends="
 	py3-acme
 	py3-configargparse
@@ -25,7 +25,7 @@ depends="
 "
 checkdepends="py3-augeas"
 replaces="letsencrypt"
-source="https://pypi.io/packages/source/c/certbot/certbot-${pkgver}.tar.gz
+source="https://pypi.io/packages/source/c/certbot/certbot-$pkgver.tar.gz
 	cerbot_py3_looseversion.patch"
 
 build() {
@@ -40,5 +40,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="ab432f3986b28d88857a550016b21240f5af85f145e12c291c9b99060c22d1d313b1ea0000db132ae0297f238096b7754ce37d409e5c83d8d67564058c657307  certbot-1.0.0.tar.gz
-e03356f528551a3b885c2eb45f18358bd1fd628b0b1a780f12cb49e6f9f3b9b81e2449d9bea4f48ba368d5c0c7f183e9d32d9a094a6d828339382f4b4938b30a  cerbot_py3_looseversion.patch"
+sha512sums="b13a965bc89f8e5310d1580de8866935d53924a398b8f374c32feac761232c13c848b19d7a91e9a61cb56e9e0bf7ff79cc7468bb5fadbf3c9eef63b2ab501e04  certbot-1.1.0.tar.gz
+880c462d225567047e30c91e6f0cb57d8fff53785fb99430f1505051a6eb76252ee0aa82367d1e1ecc89030b06f82d2bac79a64f5f50f759db97d32d0e0f3fa0  cerbot_py3_looseversion.patch"
