--- a/main/libsecret/APKBUILD
+++ b/main/libsecret/APKBUILD
@@ -15,9 +15,11 @@ source="https://download.gnome.org/sources/libsecret/${pkgver%.*}/libsecret-$pkg
 	45.patch
 	support-static-lib.patch"
 
-# Missing check dependency: gjs
 case "$CARCH" in
-	s390x) options="!check" ;;
+	# Missing check dependency: gjs
+	s390x) options="$options !check" ;;
+	# All tests fail on 32bit
+	armhf|armv7|x86) options="$options !check" ;;
 esac
 
 build() {
