testing/sssd: silence shellcheck warning
pkgdir will always be set

--- a/testing/sssd/APKBUILD
+++ b/testing/sssd/APKBUILD
@@ -104,6 +104,9 @@ package() {
 	find "$pkgdir" -name '*.pyc' -delete
 	find "$pkgdir" -name '*.egg-info' -delete
 
+	# pkgdir will allways be set, so silence shellsheck warning:
+	#    SC2115: Use "${var:?}" to ensure this never expands to /usr/share .
+	# shellcheck disable=SC2115
 	rm -r "$pkgdir"/usr/share
 	rm -r "$pkgdir"/run
 }
