--- a/community/suricata/APKBUILD
+++ b/community/suricata/APKBUILD
@@ -1,16 +1,18 @@
+# Contributor: Michael Pirogov <vbnet.ru@gmail.com>
 # Contributor: Stuart Cardall <developer at it-offshore dot co.uk>
 # Maintainer: Steve McMaster <code@mcmaster.io>
 pkgname=suricata
-pkgver=4.1.4
-pkgrel=5
+pkgver=5.0.1
+pkgrel=0
 pkgdesc="High performance Network IDS, IPS and Network Security Monitoring engine"
 url="https://suricata-ids.org/"
-arch="all"
-license="GPL-2.0"
+# s390x lacks rust support
+arch="all !s390x"
+license="GPL-2.0-only"
 makedepends="automake autoconf libtool libhtp-dev>=0.5.25 libcap-ng-dev lz4-dev
 	file-dev geoip-dev pcre-dev yaml-dev libpcap-dev hiredis-dev nss-dev
 	libnet-dev libnetfilter_queue-dev libnfnetlink-dev jansson-dev nspr-dev
-	libnetfilter_log-dev"
+	libnetfilter_log-dev libmaxminddb-dev rust luajit-dev cargo"
 depends="py3-yaml python3"
 subpackages="$pkgname-doc $pkgname-openrc"
 install="$pkgname.post-install"
@@ -18,28 +20,11 @@ source="https://www.openinfosecfoundation.org/download/suricata-$pkgver.tar.gz
 	$pkgname.confd
 	$pkgname.initd
 	$pkgname.logrotate
+	$pkgname-json-ppc64le.patch
 	"
 
-# luajit and rust are not available on some arches
-_enable_luajit=""
-_enable_rust=""
-
-case "$CARCH" in
-	aarch64|armhf|armv7|ppc64le|x86|x86_64)
-		makedepends="$makedepends luajit-dev cargo"
-		_enable_luajit="--enable-luajit"
-		_enable_rust="--enable-rust"
-		;;
-	s390x)
-		makedepends="$makedepends"
-		;;
-	*)
-		makedepends="$makedepends luajit-dev"
-		_enable_luajit="--enable-luajit"
-		;;
-esac
-
 prepare() {
+	default_prepare
 	autoreconf -vif
 }
 
@@ -59,8 +44,8 @@ build() {
 		--enable-gccprotect \
 		--enable-pie \
 		--enable-nflog \
-		$_enable_luajit \
-		$_enable_rust
+		--enable-luajit \
+		--enable-rust
 	make
 }
 
@@ -81,7 +66,8 @@ package() {
 	mkdir -p "$pkgdir"/etc/$pkgname/rules
 	install -Dm644 "$builddir"/rules/*.rules "$pkgdir"/etc/$pkgname/rules/
 }
-sha512sums="5eca09731cc7446c8d70018f1f16dfbb6a6aaed32b2c4d6a0a6f4f094012af9f3bcdc49a3fe1ff61a24c3f1d363f30b06ca74b3920ffc5452c94677a026a561c  suricata-4.1.4.tar.gz
+sha512sums="db0797a7992abf0ddf170cb603fdac06b0ff92278bb91343860bccbbe029ea0e83131dfb9805ca44bcbbe3925502119259e350a17e94209b21d1f8b610d965a6  suricata-5.0.1.tar.gz
 ed7c78a80192f3f3ed433330df323beccb6079b5413289b9e9faa3fceea2c536de93de7372968d8605abd1618d73c9319ee39d86b16eed22e7313c8667252f5d  suricata.confd
 258c6d60fc878dc1c7b7bf93cc758080050f591084a1edf7f1aac81ccb523c73615716616fedd0269f9ac5ef2fa7adcb3e2cefd714754bac5571e9806b6781be  suricata.initd
-4f76a35bcde78c9860701897fe19bb84cc46bbc429124c4cb2e94cf3330f00ebe8067c0d7f3f83478e9b95323adb947e5081658f455657c4d03c682abe707534  suricata.logrotate"
+4f76a35bcde78c9860701897fe19bb84cc46bbc429124c4cb2e94cf3330f00ebe8067c0d7f3f83478e9b95323adb947e5081658f455657c4d03c682abe707534  suricata.logrotate
+e9405c8b500abff960f38965e2c7f1aaa88dbff800959492d9aff4c09d479d681e64bca6d987af6c75d1901f44749cf07db765e68a0dc953b6ca41440dccb19d  suricata-json-ppc64le.patch"
