--- a/community/kwrited/APKBUILD
+++ b/community/kwrited/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwrited
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="KDE daemon listening for wall and write messages"
-arch="all"
+arch="all !armhf" # qt5-qtdeclarative-dev  unavilable on armhf
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev ki18n-dev kpty-dev knotifications-dev kdbusaddons-dev"
