testing/ausweisapp2: upgrade to 1.20.0

--- a/testing/ausweisapp2/APKBUILD
+++ b/testing/ausweisapp2/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: André Klitzing <aklitzing@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ausweisapp2
-pkgver=1.18.2
+pkgver=1.20.0
 pkgrel=0
 pkgdesc="Official authentication app for German ID card and residence permit"
 url="https://www.ausweisapp.bund.de/"
@@ -9,39 +9,21 @@ arch="all"
 license="EUPL-1.2"
 depends="pcsc-lite pcsc-cyberjack ccid acsccid"
 makedepends="cmake pkgconf pcsc-lite-dev http-parser-dev openssl-dev
-             qt5-qtbase-dev qt5-qtsvg-dev qt5-qtwebsockets-dev qt5-qttools-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/Governikus/AusweisApp2/archive/$pkgver.tar.gz
-        0001-Disable-auto-updater.patch
-        0002-Disable-Qt-Quick.patch
-        0003-Fix-path-for-application-icon.patch
-        0004-Fix-path-for-configuration-file.patch
-        0005-Fix-path-for-resource-file.patch
-        0006-Fix-path-for-translation-files.patch
-        "
+			qt5-qtbase-dev qt5-qtsvg-dev qt5-qtwebsockets-dev qt5-qttools-dev
+			qt5-qtdeclarative-dev qt5-qtquickcontrols2-dev"
+source="https://github.com/Governikus/AusweisApp2/releases/download/$pkgver/AusweisApp2-$pkgver.tar.gz"
 options="!check" # no upstream tests in release build
 builddir="$srcdir/AusweisApp2-$pkgver"
 
 build() {
-    mkdir -p build && cd build
-    cmake -DCMAKE_BUILD_TYPE=release -DCMAKE_INSTALL_PREFIX=/usr ..
-    make
+	mkdir -p build && cd build
+	cmake -DCMAKE_BUILD_TYPE=release -DCMAKE_INSTALL_PREFIX=/usr ..
+	make
 }
 
 package() {
-    cd build
-    make DESTDIR="$pkgdir" install
-    mkdir $pkgdir/usr/share/AusweisApp2
-    mv $pkgdir/usr/bin/AusweisApp2.rcc $pkgdir/usr/share/AusweisApp2
-    mv $pkgdir/usr/bin/config.json $pkgdir/usr/share/AusweisApp2
-    mv $pkgdir/usr/translations/ausweisapp2_de.qm $pkgdir/usr/share/AusweisApp2
-    install -m 644 $builddir/resources/images/npa_docs.png $pkgdir/usr/share/AusweisApp2/npa.png
-    rm -rf $pkgdir/usr/translations
+	cd build
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2cc0fc13c281879f30d98d0fc5d440debae4067f322d03a149dbf73b8e4ddb07a39f55417b5304445cc539cfc3a6751067331a17062aa1113421040170d87fa9  ausweisapp2-1.18.2.tar.gz
-2c3a093137bc563adc9571c05c7dccc541c1a445133ab9e4fe23a248de7e3a590c5150f6541c8f68374bb69e0a11e4ef4931fb7c2774ab003a5edaf1cfe1f845  0001-Disable-auto-updater.patch
-27a7e3151160cdcbc8fda3a9f8e83c469fee7054bc04fe0734f2cd1988e53a97cb8b92720ee7105a7ec53f4daccb3a2bb66df53455ce3ad401f26ea9653965fa  0002-Disable-Qt-Quick.patch
-10f2f440fe52a55a99a2729a437e8b97203dca9fe41b2b556688d2b17362f5a80ef00387891d6f1420778b0a906321fb6c46d16778f47177117cb8145b0e5ff2  0003-Fix-path-for-application-icon.patch
-885ad615d3f5efd60e8d763cb211da26b00fa3e05826b97c6c12478ad9ec9a5b97de6f543f57f223d30c4b29fd3c4b598f0a966a6dab3d28274fc0f7a4029475  0004-Fix-path-for-configuration-file.patch
-669df4af1eda61b97ca5864d4a2313c3eedfa145db6b74b5758caf533054fef8385519fb6c0d04af01a6ba60079753ed824632e0f528244258aaa9170cd40d5f  0005-Fix-path-for-resource-file.patch
-498e755ca2ea3768517486d7b488683a01c63eda1bfc6bcab5c1ae234876d84da9d089a132c78e8b1dfdcfa88c5bdad0c178138e3875da2cca4c86077839a4ad  0006-Fix-path-for-translation-files.patch"
+sha512sums="9fe83d59a02e8ae89dae9264a94b3d1bd943b6d4843dd8a833e9bb65a0d98c6d78f7c7b69f5cae74f013b84bf580228e1a9805f8deb8fcfc33f002f73e61d4ee  AusweisApp2-1.20.0.tar.gz"
