main/sed: upgrade to 4.8

--- a/main/sed/APKBUILD
+++ b/main/sed/APKBUILD
@@ -1,26 +1,23 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sed
-pkgver=4.7
+pkgver=4.8
 pkgrel=0
 subpackages="$pkgname-doc"
 pkgdesc="GNU stream editor"
 url="https://www.gnu.org/software/sed"
 arch="all"
-license="GPL-3.0+"
+license="GPL-3.0-or-later"
 makedepends="perl"
 checkdepends="diffutils"
 install="$pkgname.post-deinstall"
 # GNU's master site seems to be down. use a mirror for now
 #source="https://ftp.gnu.org/pub/gnu/$pkgname/$pkgname-$pkgver.tar.xz
-source="https://ftp.heanet.ie/mirrors/ftp.gnu.org/gnu/sed/$pkgname-$pkgver.tar.xz
-	disable-mbrtowc-test.patch
+source="https://ftp.heanet.ie/mirrors/ftp.gnu.org/gnu/sed/sed-$pkgver.tar.xz
 	"
 # testsuite fails because busybox provides a /usr/bin/timeout
 options="!checkroot !check"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -34,17 +31,14 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	rm -rf "$pkgdir"/usr/lib/charset.alias || true
 	rmdir -p "$pkgdir"/usr/lib 2>/dev/null || true
 }
 
-sha512sums="e0be5db4cdf8226b34aaa9071bc5ae0eafde1c52227cee3512eea7fe2520d6c5cebf15266aa5c4adffbb51bf125c140a15644e28d57759893c12823ea9bbf4fb  sed-4.7.tar.xz
-aeb55f85a5c724f0dacbf2f39e0f99ae4c66159115b00aa36d65f234f87e52e660878cb18b772a494349632dfa1b616b9306a4cafe87e91182ea8936c308506a  disable-mbrtowc-test.patch"
+sha512sums="7de25d9bc2981c63321c2223f3fbcab61d7b0df4fcf7d4394b72400b91993e1288d8bf53948ed5fffcf5a98c75265726a68ad4fb98e1d571bf768603a108c1c8  sed-4.8.tar.xz"
