community/fio: add docs

--- a/community/fio/APKBUILD
+++ b/community/fio/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: wener <wenermail@gmail.com>
 pkgname=fio
 pkgver=3.17
-pkgrel=0
+pkgrel=1
 pkgdesc="Flexible I/O Tester"
 url="https://github.com/axboe/fio"
 arch="all"
@@ -29,6 +29,11 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 	mv "$pkgdir"/usr/man "$pkgdir"/usr/share
+
+	mkdir -p "$pkgdir"/usr/share/doc/$pkgname
+	for i in README REPORTING-BUGS MORAL-LICENSE; do
+		cp -a "$builddir/$i" "$pkgdir/usr/share/doc/$pkgname"
+	done
 }
 
 sha512sums="566cb2a2cecbdbed01332e4d2ecf0b3c81e09af147f64876c7ea53d0f62e9765a3026e670fd931f275a47da15ca58997d006e2830099056ac0c5163543b23cd0  fio-3.17.tar.gz"
