testing/buildah: upgrade to 1.13.1
- add bash to build dependencies

--- a/testing/buildah/APKBUILD
+++ b/testing/buildah/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: kohnish <kohnish@gmx.com>
+# Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: kohnish <kohnish@gmx.com>
 pkgname="buildah"
-pkgver="1.12.0"
+pkgver="1.13.1"
 pkgrel=0
-pkgdesc="Buildah - a tool that facilitates building Open Container Initiative (OCI) container images"
+pkgdesc="A tool that facilitates building OCI container images"
 url="https://github.com/containers/buildah"
 arch="all"
 license="Apache-2.0"
-makedepends="go go-md2man lvm2-dev gpgme-dev libseccomp-dev btrfs-progs-dev"
+makedepends="go go-md2man lvm2-dev gpgme-dev libseccomp-dev btrfs-progs-dev bash"
 subpackages="$pkgname-doc"
 options="!check" # TODO: enable tests
 source="$pkgname-$pkgver.tar.gz::https://github.com/containers/buildah/archive/v$pkgver.tar.gz"
@@ -20,4 +21,4 @@ package() {
 	GIT_COMMIT="$pkgver" make install PREFIX=/usr DESTDIR="$pkgdir"
 }
 
-sha512sums="ed7d77dfe88f613ef4f756455d889d707707ad16f8f6a9b514a8fbaabb56fef58db54ceb2344954a9311bcc6f1f000b21ac461f9b612b8534ae6a4594ad7a16d  buildah-1.12.0.tar.gz"
+sha512sums="89c02f3c485408f16d6334bb4621accbb7de5f8d3d4458eb4c925468da1f6c14a18132e8f643e965d3054f05a90ada3c4911e539541f9ca045ca606c9ce1bed9  buildah-1.13.1.tar.gz"
