testing/dolphin-emu: upgrade to 5.0_git20200115

--- a/testing/dolphin-emu/APKBUILD
+++ b/testing/dolphin-emu/APKBUILD
@@ -1,10 +1,9 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=dolphin-emu
-_pkgname=dolphin
-pkgver=5.0_git20190915
+pkgver=5.0_git20200115
 pkgrel=0
-_commit="82fd7f576e1dff6b616ff088955c18aa76ed45d5"
+_commit="1cc7ef356b9a33814efb290368150a1cceb0a3ed"
  # Upstream doesn't actively support non 64-bit platforms and they're too slow
  # to emulate any games anyway
 arch="x86_64 aarch64"
@@ -42,7 +41,7 @@ makedepends="
 # minizip-dev xxhash-dev soundtouch-dev gtest-dev
 source="$pkgname-$_commit.tar.gz::https://github.com/dolphin-emu/dolphin/archive/$_commit.tar.gz"
 subpackages="$pkgname-doc $pkgname-lang"
-builddir="$srcdir/$_pkgname-$_commit"
+builddir="$srcdir/dolphin-$_commit"
 
 prepare() {
 	default_prepare
@@ -105,4 +104,4 @@ package() {
 	install -Dm 644 Data/51-usb-device.rules -t "$pkgdir"/usr/lib/udev/rules.d/
 }
 
-sha512sums="b14ea3d1c0d939a9a02ab8021155f30fd1bc36cc0cf55917f33ae5f230972527c8e5e0ab6fbbd1ee8aba11d15ed9433e0cca9ee165baea268e615f055918a083  dolphin-emu-82fd7f576e1dff6b616ff088955c18aa76ed45d5.tar.gz"
+sha512sums="519daec2fd22d042a4247337dafdd04d3df46cb654aba7d84101931e44c94aee39699bb5a119384785aff6da7cd5568baab000a863527cc4a445f05c7d30abf2  dolphin-emu-1cc7ef356b9a33814efb290368150a1cceb0a3ed.tar.gz"
