community/tracker-miners: enable libgrss and icu integration

--- a/community/tracker-miners/APKBUILD
+++ b/community/tracker-miners/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tracker-miners
 pkgver=2.3.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Data miners for tracker"
 url="https://developer.gnome.org/libtracker-miner/stable"
 arch="all !s390x" # networkmanager not avail due to iwd
@@ -13,7 +13,7 @@ makedepends="meson glib-dev intltool tracker-dev ffmpeg-dev dbus-dev exempi-dev
 	libgsf-dev libgxps-dev libiptcdata-dev libjpeg-turbo-dev libosinfo-dev
 	libpng-dev libseccomp-dev tiff-dev libxml2-dev libvorbis-dev poppler-dev
 	taglib-dev totem-pl-parser-dev upower-dev zlib-dev gst-plugins-base-dev
-	giflib-dev"
+	giflib-dev libgrss-dev icu-dev"
 checkdepends="bash coreutils python3 py3-gobject3"
 options="!check" # Requires itself to be installed on the system
 subpackages="$pkgname-doc $pkgname-lang $pkgname-dbg"
