main/grub: add missing dep on gettext, required for autopoint
Closes !3083

--- a/main/grub/APKBUILD
+++ b/main/grub/APKBUILD
@@ -11,7 +11,7 @@ depends="mkinitfs"
 triggers="grub.trigger=/boot"
 depends_dev=""
 makedepends="$depends_dev bison flex linux-headers xz-dev lvm2-dev
-	automake autoconf libtool python3 freetype-dev unifont"
+	automake autoconf libtool python3 freetype-dev unifont gettext-dev"
 install="$pkgname.post-upgrade"
 # strip handled by grub Makefiles, abuild strip breaks xen pv-grub
 options="!check !strip"  # Cannot test boot loader.
