testing/corecollector: upgrade to 0.3.0

--- a/testing/corecollector/APKBUILD
+++ b/testing/corecollector/APKBUILD
@@ -1,12 +1,13 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=corecollector
-pkgver=0.2.0
+pkgver=0.3.0
 pkgrel=0
 pkgdesc="A coredump collector written in D"
 url="https://github.com/Cogitri/corecollector"
 arch="all !ppc64le" # Missing gdc on ppc64le
 license="GPL-3.0-or-later"
+depends="gdb"
 makedepends="meson gcc-gdc scdoc"
 install="$pkgname.pre-install $pkgname.pre-upgrade"
 subpackages="$pkgname-doc"
@@ -24,11 +25,11 @@ build() {
 }
 
 check() {
-	ninja -j1 -C output test
+	ninja -C output test
 }
 
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="7af449e9134c663c7ea4de5b529c77bc84115179750fdf9e09492254d3008798e326a4e108d9735111e58f1f1e40414b570f0919749054a35325ec6e15b3dfb3  corecollector-0.2.0.tar.gz"
+sha512sums="de094dc7556575bf953bd7e7222200338e6b15c35ed1d06de147e70ba8bc30cbb39da6c3c275ceefca447e9a7e177a72cccb4ccc9089024643e326620b1f15fb  corecollector-0.3.0.tar.gz"
