--- a/testing/hotspot/APKBUILD
+++ b/testing/hotspot/APKBUILD
@@ -5,7 +5,9 @@ pkgver=1.2.0
 pkgrel=0
 pkgdesc="The Linux perf GUI for performance analysis"
 url="https://github.com/KDAB/hotspot"
-arch="all !s390x" # undefined reference to 'QDataStream::Version qbswap<QDataStream::Version>(QDataStream::Version)'
+# s390x: undefined reference to 'QDataStream::Version qbswap<QDataStream::Version>(QDataStream::Version)'
+# x86: failing tests
+arch="all !s390x !x86"
 license="GPL-2.0-or-later"
 makedepends="cmake qt5-qtbase-dev elfutils-dev gettext-dev extra-cmake-modules
 	threadweaver-dev ki18n-dev kconfigwidgets-dev kcoreaddons-dev kitemviews-dev
