community/firefox-esr: disable on armhf
media/webrtc/trunk/webrtc/common_audio/common_audio_c_arm_asm_gn/spl_sqrt_floor_arm.o
/home/buildozer/aports/community/firefox-esr/src/firefox-68.4.1/media/webrtc/trunk/webrtc/common_audio/common_audio_c_arm_asm_gn/../signal_processing/filter_ar_fast_q12_armv7.S: Assembler messages:
/home/buildozer/aports/community/firefox-esr/src/firefox-68.4.1/media/webrtc/trunk/webrtc/common_audio/common_audio_c_arm_asm_gn/../signal_processing/filter_ar_fast_q12_armv7.S:88: Error: selected processor does not support `sbfx r11,r6,#12,#16' in ARM mode
/home/buildozer/aports/community/firefox-esr/src/firefox-68.4.1/media/webrtc/trunk/webrtc/common_audio/common_audio_c_arm_asm_gn/../signal_processing/filter_ar_fast_q12_armv7.S:99: Error: selected processor does not support `sbfx r11,r6,#12,#16' in ARM mode
/home/buildozer/aports/community/firefox-esr/src/firefox-68.4.1/media/webrtc/trunk/webrtc/common_audio/common_audio_c_arm_asm_gn/../signal_processing/filter_ar_fast_q12_armv7.S:142: Error: selected processor does not support `sbfx r8,r6,#12,#16' in ARM mod

--- a/community/firefox-esr/APKBUILD
+++ b/community/firefox-esr/APKBUILD
@@ -5,7 +5,7 @@ pkgver=68.4.1
 pkgrel=0
 pkgdesc="Firefox web browser - Extended Support Release"
 url="https://www.mozilla.org/en-US/firefox/organizations/"
-arch="all !s390x" # limited by rust and cargo
+arch="all !s390x !armhf" # limited by rust and cargo on s390x, fails to build on armhf
 license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 makedepends="
 	alsa-lib-dev
