--- a/main/openrc/APKBUILD
+++ b/main/openrc/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=openrc
 pkgver=0.42.1
 _ver=${pkgver/_git*/}
-pkgrel=1
+pkgrel=2
 pkgdesc="OpenRC manages the services, startup and shutdown of a host"
 url="https://github.com/OpenRC/openrc"
 arch="all"
@@ -23,6 +23,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/OpenRC/openrc/archive/$pkgve
 	0001-fsck-don-t-add-C0-to-busybox-fsck.patch
 	0008-fix-undeclared-UT_LINESIZE.patch
 	0009-Support-early-loading-of-keymap-if-kdb-is-installed.patch
+	0010-rc-mount-make-timeout-invocation-compatible-with-bus.patch
 
 	openrc.logrotate
 	hostname.initd
@@ -122,6 +123,7 @@ d54630d40a2d6b10a325cb012d4efcda997a60c008ca953ce5d60059d3f267308a59dabddf93a5fc
 dbe3f170440f0f357f31ac4d49c56a9a7ec22172df2701bf4a0afdee22aedda1f88b9fa5ffdbe19a5eea3c764ad0e4c802e19b95b7082a72d423d46d30c18edd  0001-fsck-don-t-add-C0-to-busybox-fsck.patch
 d2b8700f56b05579926352855de8fcee5cf78f0c13200643a5195f8c60e2b5082d476b42cc77b13246b9fb883aa002d723237b0fc7ae84ccd7ebe3b25690cf50  0008-fix-undeclared-UT_LINESIZE.patch
 667085d89e194f7e2255d5c098c3d8de272f54cb925710cb98d5e7a6b58982d0acfe15f97b574cfc646b139cd7aa5b527ba700ef9b8048a6d6d9dee8cc74913c  0009-Support-early-loading-of-keymap-if-kdb-is-installed.patch
+ff9bf2f6e4f55633a9641385398f70a2e591e2b3b56b1903f168a97b07bd56dc5a65d151deeab94229452b2e892b597c16dc3d57d5d47ec35a48cf5343190c36  0010-rc-mount-make-timeout-invocation-compatible-with-bus.patch
 12bb6354e808fbf47bbab963de55ee7901738b4a912659982c57ef2777fff9a670e867fcb8ec316a76b151032c92dc89a950d7d1d835ef53f753a8f3b41d2cec  openrc.logrotate
 493f27d588e64bb2bb542b32493ed05873f4724e8ad1751002982d7b4e07963cfb72f93603b2d678f305177cf9556d408a87b793744c6b7cd46cf9be4b744c02  hostname.initd
 c06eac7264f6cc6888563feeae5ca745aae538323077903de1b19102e4f16baa34c18b8c27af5dd5423e7670834e2261e9aa55f2b1ec8d8fdc2be105fe894d55  hwdrivers.initd
