main/e2fsprogs: security upgrade to 1.45.5
ref #11133

--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=e2fsprogs
-pkgver=1.45.4
+pkgver=1.45.5
 pkgrel=0
 pkgdesc="Standard Ext2/3/4 filesystem utilities"
 url="http://e2fsprogs.sourceforge.net"
@@ -14,6 +14,8 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc libcom_err $pkgname-libs 
 source="https://www.kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v$pkgver/e2fsprogs-$pkgver.tar.xz"
 
 # secfixes:
+#   - 1.45.5-r0:
+#     - CVE-2019-5188
 #   - 1.45.4-r0:
 #     - CVE-2019-5094
 
@@ -88,4 +90,4 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib
 }
 
-sha512sums="408f093a6674ef2316c451173481851041957617c550308d2969b983e11d988ddfc120626cd957c0759648bc357edf1d9971e6d46bed109c2af5f8a09bdc5bda  e2fsprogs-1.45.4.tar.xz"
+sha512sums="d1a8611b525742387061f390fb24825dfa175997cc7db05decea913fcc7b97a95a3e787091f2920d4a7d4eb1d813568af734a1610229ead09bcbf9f3e262e4ce  e2fsprogs-1.45.5.tar.xz"
