--- a/community/mpd/APKBUILD
+++ b/community/mpd/APKBUILD
@@ -9,7 +9,7 @@ case $pkgver in
 *.*.*) _branch=${pkgver%.*};;
 *.*) _branch=$pkgver;;
 esac
-pkgrel=5
+pkgrel=6
 pkgdesc="Music daemon that plays MP3, FLAC, Ogg Vorbis files and Audio CDs"
 url="https://musicpd.org"
 pkgusers="mpd"
@@ -20,7 +20,7 @@ makedepends="py3-sphinx lame-dev glib-dev curl-dev libao-dev libmad-dev flac-dev
 	libogg-dev faad2-dev libid3tag-dev libvorbis-dev alsa-lib-dev
 	libsamplerate-dev libshout-dev libmodplug-dev boost-dev icu-dev
 	libnfs-dev samba-dev opus-dev ffmpeg-dev meson libmpdclient-dev
-	libcdio-paranoia-dev py3-attrs"
+	libcdio-paranoia-dev py3-attrs libcap"
 checkdepends="gtest-dev gtest"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-dbg $pkgname-openrc"
@@ -59,6 +59,11 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
+
+	# mpd attempts to configure real-time scheduling on linux
+	# add the capability which allows doing that
+	# see: https://www.musicpd.org/doc/html/user.html#real-time-scheduling
+	setcap cap_sys_nice+ep "$pkgdir"/usr/bin/mpd
 
 	# provide a config that works by default
 	install -d "$pkgdir"/etc
