main/mkinitfs: upgrade to 3.4.5

--- a/main/mkinitfs/APKBUILD
+++ b/main/mkinitfs/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mkinitfs
-pkgver=3.4.4
+pkgver=3.4.5
 _ver=${pkgver%_git*}
-pkgrel=1
+pkgrel=0
 pkgdesc="Tool to generate initramfs images for Alpine"
 url="https://git.alpinelinux.org/cgit/mkinitfs"
 arch="all"
@@ -15,8 +15,7 @@ depends="busybox>=1.28.2-r1 apk-tools>=2.9.1 lddtree>=1.25"
 subpackages="$pkgname-doc"
 install="$pkgname.pre-upgrade $pkgname.post-install $pkgname.post-upgrade"
 triggers="$pkgname.trigger=/usr/share/kernel/*"
-source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$_ver.tar.xz
-	0001-init-quote-rootfstype-during-comparison.patch"
+source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$_ver.tar.xz"
 
 build() {
 	cd "$builddir"
@@ -28,5 +27,4 @@ package() {
 	make install DESTDIR="$pkgdir"
 }
 
-sha512sums="0f26969cb0e6627e7594f09038ada99ea1fa161de918834b95a92d5ba41ebe2ffa93510e2797310f98c963a3140dbde53747064f43ebc31c15bb061a56173ee5  mkinitfs-3.4.4.tar.xz
-2cf3c2fb190e0001c4c29495cd1f3661a75ae61cd540f77759836b0cca13c638e7c3789c1456dbc27be124cf6f7ebc688815a1ad8a2dff09f4e75eac62a67d58  0001-init-quote-rootfstype-during-comparison.patch"
+sha512sums="e12f603dd9a51c0afbafeca7b4a061733514c4cf509b1dd61cc37c94e6102e5b3439d7a0379e1e4179aeaff13a382dab985c9737812e52803f038c1b2bb97cf8  mkinitfs-3.4.5.tar.xz"
