community/nnn: upgrade to 2.9

--- a/community/nnn/APKBUILD
+++ b/community/nnn/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=nnn
-pkgver=2.8.1
+pkgver=2.9
 pkgrel=0
 pkgdesc="The missing terminal file browser for X"
 url="https://github.com/jarun/nnn"
 arch="all !armhf !armv7"  # armhf: fails to build
 license="BSD-2-Clause"
 makedepends="ncurses-dev readline-dev"
-options="!check"  # no tests provided and `nnn -v` requires tty
+options="!check"  # no tests provided and $(nnn -v) requires tty
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
@@ -58,5 +58,5 @@ zshcomp() {
 		"$subpkgdir"/usr/share/zsh/site-functions/_$pkgname
 }
 
-sha512sums="b669136c1a0e1f0346e86430acb59af8328eda83b0c1a9d8079b886d632556aac9a19a362dc8373f2558cc54c7f4bedb3e56cb16a3a08d560b9ccd14ada36bd8  nnn-2.8.1.tar.gz
+sha512sums="7bc64901a317de79cb9e29502cda70b59ca681ddde53385521a08e49cbc32fa10bb76ceef2e911838c0bb7be4f5018dce4a1906e77c0ca9f1ec8164c82da7bb2  nnn-2.9.tar.gz
 9f70f5fec2799caf1624e1334e687072dde94ee550a4cd7ee5a1a6b9b880f3fe40b6cbd631ce2d024cb811b5115249e7cd81c880c88f2289f627cd866fc06036  nlay"
