main/lftp: upgrade to 4.9.1

--- a/main/lftp/APKBUILD
+++ b/main/lftp/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=lftp
-pkgver=4.9.0
+pkgver=4.9.1
 pkgrel=0
 pkgdesc="Sophisticated ftp/http client"
 url="https://lftp.tech"
@@ -10,16 +10,13 @@ arch="all"
 license="GPL-3.0-or-later"
 makedepends="zlib-dev openssl-dev readline-dev ncurses-dev"
 subpackages="$pkgname-doc"
-source="https://lftp.yar.ru/ftp/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://lftp.yar.ru/ftp/lftp-$pkgver.tar.xz"
 
 # secfixes:
 #   4.8.4-r0:
 #     - CVE-2018-10916
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -34,7 +31,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 install DESTDIR="$pkgdir"
 	rm -f "$pkgdir"/usr/lib/charset.alias
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname
@@ -42,9 +38,8 @@ package() {
 }
 
 check() {
-	cd "$builddir"
 	# skip ftp tests due to firewall issues
 	make -C tests check check_PROGRAMS=http-get
 }
 
-sha512sums="8d83ea76390d38cb1f84f02eb7bf45780758afb9fe61f5b7278a48c9a5d216d03bc8b699c0f449a0036bdb441b4225af074da1b5e92a77ddb61aca704758211e  lftp-4.9.0.tar.xz"
+sha512sums="303e2354bd61a850403a02ac5b71e54719c12b026c7e36194a6382e9044f1fee93ea581ba0a55fea19981e07b896216e92c7d961c719350762eb0cfb51a2c506  lftp-4.9.1.tar.xz"
