--- a/community/perl-xml-libxslt/APKBUILD
+++ b/community/perl-xml-libxslt/APKBUILD
@@ -3,43 +3,38 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=perl-xml-libxslt
 _pkgreal=XML-LibXSLT
-pkgver=1.96
-pkgrel=2
+pkgver=1.97
+pkgrel=0
 pkgdesc="Interface to GNOME libxslt library"
-url="http://search.cpan.org/dist/XML-LibXSLT/"
+url="https://metacpan.org/release/XML-LibXSLT"
 arch="all"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 cpandepends="perl-xml-libxml"
-cpanmakedepends="   "
 depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends libxml2-dev libxslt-dev libgcrypt-dev libgpg-error-dev"
+makedepends="perl-dev libxml2-dev libxslt-dev libgcrypt-dev libgpg-error-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/S/SH/SHLOMIF/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/S/SH/SHLOMIF/XML-LibXSLT-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 	rm t/01basic.t
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-        cd "$builddir"
-        make test
+	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="7b6e22889c538bbd861c6420cd56893d229676d3afc1cf30e17cae48a4714139769a99a48a99f1dff52864f4989e410303007c07941625bf6bd12a24276c35e6  XML-LibXSLT-1.96.tar.gz"
+sha512sums="9c1ef90ac7b1427f30d7186aaf716056d61fd6964d7687edf0ccb2d2cfd49cda69fe31f9b83dd9ed345a61087235db3addf93e8df5874c907f094dbd1ea0cb4f  XML-LibXSLT-1.97.tar.gz"
