--- a/community/grim/APKBUILD
+++ b/community/grim/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=grim
-pkgver=1.2.0
-pkgrel=1
+pkgver=1.3.0
+pkgrel=0
 pkgdesc="Grabs images from Wayland compositors"
 options="!check" # No testsuite
 url="https://wayland.emersion.fr/grim/"
@@ -9,9 +9,7 @@ arch="all"
 license="MIT"
 makedepends="meson scdoc wayland-dev wayland-protocols cairo-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/emersion/$pkgname/archive/v$pkgver.tar.gz
-	dont-werror.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/emersion/grim/archive/v$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -28,5 +26,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="d58e392f00b93e031fd46a9e0175aaa5c3ce4fafb2afa3cc97ff28a9f77fc5583774f6ddf86295262749c00dd7c4e98c6041588bfa6fd70319ddfce6b903414e  grim-1.2.0.tar.gz
-e7be4fdf42847a024ef75baeb3e3b0a34f4a6aa9394f3834e1803fb7e41a54ec42d3cd0f6920ecfc5d4bca043c69fc6aa81adb102c2702807d7488f084d51187  dont-werror.patch"
+sha512sums="de56046375da1a0c4d787a39d97e18af964dbf40b0d18c6f99c68b4bf054cf6712ba653d69711d3bc6f50870a23649959d67c0b150ac5c637e8c9e74b0eba2e6  grim-1.3.0.tar.gz"
