main/rsync: use system zlib library

--- a/main/rsync/APKBUILD
+++ b/main/rsync/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=rsync
 pkgver=3.1.3
-pkgrel=2
+pkgrel=3
 pkgdesc="A file transfer program to keep remote files in sync"
 url="https://rsync.samba.org/"
 arch="all"
 options="!checkroot"
 license="GPL-3.0-or-later"
-makedepends="perl acl-dev attr-dev popt-dev"
+makedepends="perl acl-dev attr-dev popt-dev zlib-dev"
 subpackages="$pkgname-doc $pkgname-openrc rrsync"
 source="https://download.samba.org/pub/rsync/rsync-$pkgver.tar.gz
 	rsyncd.initd
