--- a/testing/fennel/APKBUILD
+++ b/testing/fennel/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Will Sinatra <wpsinatra@gmail.com>
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=fennel
-pkgver=0.3.1
-pkgrel=2
+pkgver=0.3.2
+pkgrel=0
 pkgdesc="A Lua Lisp Language"
 url="https://fennel-lang.org"
-arch="all !s390x" #did not build on s390x CI
+arch="noarch !s390x" #did not build on s390x CI
 license="MIT"
 source="fennel-$pkgver.tar.gz::https://github.com/bakpakin/Fennel/archive/$pkgver.tar.gz
 		lua5.3-fennel.patch"
@@ -32,5 +32,5 @@ package() {
 			"$pkgdir/usr/bin/fennel"
 }
 
-sha512sums="bcc34429c616f4bad471a4ba6a830d58254582a82384d71a8bee81b72bb531d0322b5160d7e741cdff0bf8a421f0630b967ca45ae6594f06877b3029bc063385  fennel-0.3.1.tar.gz
+sha512sums="14fe3e2530d7d733c39a457067669ec21e2aa071bdc4de5b787051ebe7af3d276715666ffded3f90cfcb8bd6a19b777130d2b8159ae6991dcdc4bbe4b62b269b  fennel-0.3.2.tar.gz
 c9f45147b5eae695108557d19714c7013409451f68e8a55cc92340d80d222f2d7b7069d9b25bc32111580f0dd432b17bb349b40f02f28c3c7ebb89494c2cf788  lua5.3-fennel.patch"
