--- a/testing/micropython/APKBUILD
+++ b/testing/micropython/APKBUILD
@@ -1,36 +1,39 @@
 # Contributor: Marian <marian.buschsieweke@ovgu.de>
 # Maintainer: Marian <marian.buschsieweke@ovgu.de>
 pkgname=micropython
-pkgver=1.11
+pkgver=1.12
 pkgrel=0
 pkgdesc="A lean and efficient Python implementation for MCUs and constrained systems"
 url="https://www.micropython.org/"
 
-# ../py/persistentcode.c:397:2: error: #error mp_raw_code_save_file not implemented for this platform
-arch="all !s390x !x86 !armv7 !ppc64le !aarch64"
+# ppc64le: mpy-cross fails to compile with "unsupported relocation
+# armv7: 21 unit tests fail (not minor stuff line double precision issues)
+arch="all !ppc64le !armv7"
 
 license="MIT"
 makedepends="libffi-dev python3"
 subpackages="$pkgname-cross"
-source="${pkgname}-${pkgver}.tar.gz::https://github.com/${pkgname}/${pkgname}/archive/v${pkgver}.tar.gz
+source="micropython-$pkgver.tar.gz::https://github.com/micropython/micropython/archive/v$pkgver.tar.gz
 	micropython-1.9.4-prevent-stripping.patch
-	0000-unix-mpconfigport.patch
 	python3.patch
+	no_ussl.patch
+	no_legacy_berkeley_db.patch
 	"
 
 build() {
+	make -C mpy-cross PYTHON=python3
 	make -C ports/unix PYTHON=python3
 }
 
 check() {
 	# float rounding fails https://github.com/micropython/micropython/issues/4176
 	case "$CARCH" in
+		s390x)
+			rm tests/float/float_parse.py tests/float/float_parse_doubleprec.py
+			;;
 		aarch64)
 			rm tests/float/float_parse.py tests/float/float_parse_doubleprec.py
-		;;
-		ppc64le)
-			rm tests/float/float_parse.py tests/float/float_parse_doubleprec.py tests/micropython/extreme_exc.py
-		;;
+			;;
 	esac
 
 	# ffi callback fails on kernel with PaX
@@ -40,18 +43,19 @@ check() {
 }
 
 package() {
-	mkdir -p "${pkgdir}/usr/bin"
-	install -m755 ports/unix/micropython "${pkgdir}/usr/bin/micropython"
+	mkdir -p "$pkgdir/usr/bin"
+	install -m755 ports/unix/micropython "$pkgdir/usr/bin/micropython"
 }
 
 cross() {
 	pkgdesc="Compile micropython code to bytecode, which can be transfered to MCUs"
 	cd "$builddir"
-	mkdir -p "${subpkgdir}/usr/bin"
-	install -m755 mpy-cross/mpy-cross "${subpkgdir}/usr/bin/mpy-cross"
+	mkdir -p "$subpkgdir/usr/bin"
+	install -m755 mpy-cross/mpy-cross "$subpkgdir/usr/bin/mpy-cross"
 }
 
-sha512sums="1d8a9e79690da3c92cf0a6bdc76d091321bf1ebc310d6f8dd11101a64861599b076cacb59489e3cf86f47cf4fe4331f16f6afd64a2f1cf0cbdf1ddb294b7623e  micropython-1.11.tar.gz
+sha512sums="624688bdf658f63de2257eed7b903a2a1bebaf02436feed09e0893090f49052d0e1b3d55ee8128f5ea813586f5c1e3d6cce6a8230be7fdb418509bb3b734b5ca  micropython-1.12.tar.gz
 8f994394f42d7fed5fa35b62c01c37ebea3b487c029d659134a263ef8d65e1ec17bec755fdf57cde2f234969bc4f7f4ab30858562d7f8cdb2bc6cb819ba2ae0d  micropython-1.9.4-prevent-stripping.patch
-4c1de6a6477453e846998565402c69d1dd716cf692a3bb55aa16b6991722a94d8364c05f0603b981a7dd9e9af577a3f46910a60d501513af547ebbf3ed574711  0000-unix-mpconfigport.patch
-8dbdc52e09f70b5eea461257ebc00031ab9d2c91a9bdbd7522e4ffd1eddddcd0dab3a171361e776543abca827a2f5d6ad01b06c10c8635db861bf79bfa065338  python3.patch"
+8dbdc52e09f70b5eea461257ebc00031ab9d2c91a9bdbd7522e4ffd1eddddcd0dab3a171361e776543abca827a2f5d6ad01b06c10c8635db861bf79bfa065338  python3.patch
+9a6cd131c8875a9d320653b7b93d46a759eee3255e25763eb8de6934b3035f691e497eafc9412320f13c5921a384d42d6e60ea3eb3d65f3a6101dae9be514f3c  no_ussl.patch
+e86ad02ef746605f2f685ae776a6ad6ea39ae6e57fa0869a0c03895fd581647de20fa7e6aaeebac45e7302a63451d625208b1356ee2f35a66df70ac2755a25ff  no_legacy_berkeley_db.patch"
