community/php7-pecl-igbinary: upgrade to 3.1.1

--- a/community/php7-pecl-igbinary/APKBUILD
+++ b/community/php7-pecl-igbinary/APKBUILD
@@ -3,7 +3,7 @@
 
 pkgname=php7-pecl-igbinary
 _pkgreal=igbinary
-pkgver=3.1.1a1
+pkgver=3.1.1
 pkgrel=0
 pkgdesc="Igbinary is a drop in replacement for the standard php serializer"
 url="https://pecl.php.net/package/igbinary"
@@ -38,4 +38,4 @@ package() {
 		"$pkgdir"/etc/php7/conf.d/10_$_pkgreal.ini
 }
 
-sha512sums="50545b279a734d8fe1e651009aaeb8d16ad94bab1220b2b0a0c9c9c97549146c52f6ff7cf6d4edd0172602dd9a0d8ad83375a3567155f0814eed3eb7925b3fc4  php7-pecl-igbinary-3.1.1a1.tgz"
+sha512sums="a52fa2077f7166620fd88ea6c2cf081ca2edbd51a4671b333bd8f4b2b90748a1ab2275a77a78f9688b2261f27ff9840610410e49aae3e04136eb78db1990a8d0  php7-pecl-igbinary-3.1.1.tgz"
