testing/hotspot: disable on x86_64 due to failing test
The following tests FAILED:
	  3 - tst_kallsyms (Failed)
Errors while running CTest

disable to unblock the builder

--- a/testing/hotspot/APKBUILD
+++ b/testing/hotspot/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="The Linux perf GUI for performance analysis"
 url="https://github.com/KDAB/hotspot"
 # s390x: undefined reference to 'QDataStream::Version qbswap<QDataStream::Version>(QDataStream::Version)'
 # x86: failing tests
-arch="all !s390x !x86"
+arch="all !s390x !x86 !x86_64"
 license="GPL-2.0-or-later"
 makedepends="cmake qt5-qtbase-dev elfutils-dev gettext-dev extra-cmake-modules
 	threadweaver-dev ki18n-dev kconfigwidgets-dev kcoreaddons-dev kitemviews-dev
