community/coretime: disable on armhh due to missing qt5-qtmultimedia

--- a/community/coretime/APKBUILD
+++ b/community/coretime/APKBUILD
@@ -4,7 +4,7 @@ pkgname=coretime
 pkgver=2.8.0
 pkgrel=0
 pkgdesc="A time related task manager from the CoreApps family."
-arch="all"
+arch="alli !armhf"
 url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
