--- a/community/qt5-qtdeclarative/APKBUILD
+++ b/community/qt5-qtdeclarative/APKBUILD
@@ -10,7 +10,7 @@ _v=${_ver/rc/RC}
 pkgrel=1
 pkgdesc="Qt5 - QtDeclarative component"
 url="http://qt-project.org/"
-arch="all !armhf" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
+arch="all" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev python3"
 subpackages="$pkgname-dev"
