--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -13,7 +13,7 @@
 #
 pkgname=openldap
 pkgver=2.4.48
-pkgrel=1
+pkgrel=2
 pkgdesc="LDAP Server"
 url="http://www.openldap.org/"
 arch="all"
@@ -82,6 +82,7 @@ build() {
 		--localstatedir=/var/lib/openldap \
 		--enable-slapd \
 		--enable-crypt \
+		--enable-spasswd \
 		--enable-modules \
 		--enable-dynamic \
 		--enable-bdb=mod \
