community/libarchive-qt: upgrade to 1.1.1

--- a/community/libarchive-qt/APKBUILD
+++ b/community/libarchive-qt/APKBUILD
@@ -1,25 +1,26 @@
+# Contributor:
+# Maintainer:
 pkgname=libarchive-qt
-pkgver=1.0.2
+pkgver=1.1.1
 pkgrel=0
 pkgdesc="A Qt based archiving solution with libarchive backend"
-arch="all"
 url="https://gitlab.com/marcusbritanicus/libarchive-qt"
+options="!check"
+arch="all"
 license="LGPL-3.0-or-later"
 depends_dev="qt5-qtbase-dev xz-dev libarchive-dev zlib-dev bzip2-dev"
 makedepends="$depends_dev lzip"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/marcusbritanicus/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
 subpackages="$pkgname-dev"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/marcusbritanicus/libarchive-qt/-/archive/v$pkgver/libarchive-qt-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
-options="!check"
 
 build() {
-	cd "$builddir"
 	qmake-qt5
 	make
 }
 
 package() {
-	cd "$builddir"
 	INSTALL_ROOT="$pkgdir" make install
+	rm -f "$pkgdir"/usr/lib/*.a
 }
-sha512sums="3d06beff6f23ec16dfcd3b18e5ade63f22568b7466a539750d916e73be24dac6e4d9551865eea960d2c2745639bd68ae6906d13a3066cc02c8056da44be9f6a2  libarchive-qt-1.0.2.tar.gz"
+sha512sums="7a4bfc73b474e920471870faf2c9d230cd385cb725a6bc0cb8f4f5a74c47a0cc26e86b9290fb14e10a6d5bef65eee2a46673febe1039fdfa32464fbbfacd8a3d  libarchive-qt-1.1.1.tar.gz"
