--- a/community/mako/APKBUILD
+++ b/community/mako/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=mako
-pkgver=1.4
-pkgrel=1
+pkgver=1.4.1
+pkgrel=0
 pkgdesc="A lightweight notification daemon for Wayland"
 url="https://wayland.emersion.fr/mako/"
 arch="all"
@@ -20,7 +20,7 @@ makedepends="
 	wayland-protocols
 	"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/emersion/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/emersion/mako/archive/v$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -35,4 +35,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="6059103e3a0c0cca5b0f717fbd7522f9a13f3dd3d65fe674e65cc175122a3372041bee2050d253ccb47a2adaa1dfa3180a19276bcdcb20c1e00813d75e1b3683  mako-1.4.tar.gz"
+sha512sums="25b0f59645c1815d8bdba42cedd6f56163ff663cd801a534c4c725c99e9a8cc28aef1d2c899d30cca06f0c6ddfa4a8e6efa01e5e98091347bcfc80d596f16d43  mako-1.4.1.tar.gz"
