testing/kicad-library: Enable all archs but s390x

--- a/testing/kicad-library/APKBUILD
+++ b/testing/kicad-library/APKBUILD
@@ -2,11 +2,11 @@
 # Contributor: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 pkgname=kicad-library
 pkgver=5.1.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Kicad component and footprint libraries"
 url="http://kicad.github.io/"
 # kicad is only available on x86_64 currently :-/
-arch="noarch !armhf !armv7 !aarch64 !ppc64le !s390x !x86"
+arch="noarch !s390x"
 license="GPL-3.0-or-later"
 makedepends="cmake"
 depends="kicad"
