community/font-overpass: fix url= and simplify
- Remove the build() step
- Simplify the install() step by having only one call to `install`

--- a/community/font-overpass/APKBUILD
+++ b/community/font-overpass/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Sascha Paunovic <azarus@posteo.net>
 pkgname=font-overpass
 pkgver=3.0.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Overpass open source web font family"
-url="http://overpassfont.org/"
+url="https://overpassfont.org/"
 arch="noarch"
 license="OFL-1.1"
 depends="fontconfig"
@@ -12,16 +12,8 @@ options="!check" # no test suite
 source="Overpass-$pkgver.tar.gz::https://github.com/RedHatBrand/Overpass/archive/$pkgver.tar.gz"
 builddir="$srcdir/Overpass-$pkgver"
 
-build() {
-	return 0
-}
-
 package() {
-	mkdir -p "$pkgdir"/usr/share/fonts/OTF
-	install -Dm644 desktop-fonts/overpass/*.otf \
-		"$pkgdir"/usr/share/fonts/OTF
-	install -Dm644 desktop-fonts/overpass-mono/*.otf \
-		"$pkgdir"/usr/share/fonts/OTF
+	install -Dm644 desktop-fonts/*/*.otf -t "$pkgdir"/usr/share/fonts/OTF
 }
 
 sha512sums="a11f4fdcfbe7534bcb822ddbd1e9a8e72b47f04cb70674073917888e70f0df74cf1e86b2ed2fa73e2c6c6768b8c02333b0a7f1b676c626eb331b3fa1458ac2bb  Overpass-3.0.4.tar.gz"
