--- a/testing/paris-traceroute/APKBUILD
+++ b/testing/paris-traceroute/APKBUILD
@@ -6,10 +6,7 @@ pkgdesc="advanced traceroute utility"
 url="https://github.com/libparistraceroute/libparistraceroute"
 arch="all"
 license="GPL-3.0-only"
-depends=""
-depends_dev=""
-makedepends="$depends_dev autoconf automake libtool"
-install=""
+makedepends="autoconf automake libtool"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-ping $pkgname-dbg"
 source="https://github.com/libparistraceroute/libparistraceroute/archive/v$pkgver/libparistraceroute-$pkgver.tar.gz
 	in6-union.patch
@@ -19,17 +16,16 @@ builddir="$srcdir/libparistraceroute-$pkgver"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	sh autogen.sh
 }
 
 build() {
-        ./configure \
-                --build=$CBUILD \
-                --host=$CHOST \
-                --prefix=/usr \
-                --mandir=/usr/share/man \
-                --infodir=/usr/share/info
+	./configure \
+		--build=$CBUILD \
+		--host=$CHOST \
+		--prefix=/usr \
+		--mandir=/usr/share/man \
+		--infodir=/usr/share/info
 	make
 }
 
